# semiotic-emergence-gpu

./: .gitignore  FINDINGS.md  README.md  analyze.py  colab.ipynb  launch.sh  pyproject.toml  setup-gpu.sh  validate.sh
remote/: check-7k.sh  launch-remote.sh  monitor-7k.sh  retrieve-7k.sh  run-7k.sh  setup.sh
remote/results-7k/7k-seed42/: input_mi.csv  output.csv  trajectory.csv
src/semgpu/: __init__.py  brain.py  config.py  evolution.py  main.py  metrics.py  signal.py  spatial.py  world.py
tests/: test_brain.py  test_evolution.py  test_integration.py  test_metrics.py  test_spatial.py  test_world.py
