[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semgpu"
version = "0.1.0"
description = "GPU-optimized evolutionary communication simulation (JAX)"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "jax>=0.9.0",
    "jaxlib>=0.9.0",
    "equinox>=0.11.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.9.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
